fixed news section on home and Button on small screens

--- a/frontend/src/components/sections/GovBtnSection.css
+++ b/frontend/src/components/sections/GovBtnSection.css
@@ -8,7 +8,7 @@
 @media (max-width: 768px) {
   .btn-section {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     gap: 10px;
     align-items: center;
     padding: 42px 20px;
