--- a/frontend/src/styles/homePage.module.css
+++ b/frontend/src/styles/homePage.module.css
@@ -359,4 +359,11 @@ details[open] .dropdownIcon {
     text-align: left;
     /* padding: 1rem; */
   }
+
+  .newsContent {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 60px;
+    align-items: center;
+  }
 }
